--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                 <!-- Result -->
                 <div id="result" class="space-y-4"></div>
 
+                <!-- History -->
+                <div id="historyWrap" class="mt-8 hidden">
+                    <h2 class="text-base font-semibold mb-2">Historia (najnowsze → najstarsze)</h2>
+                    <div id="history" class="space-y-2"></div>
+                </div>
+
                 <!-- Expenses list -->
                 <div id="expensesWrap" class="mt-8 hidden">
                     <h2 class="text-base font-semibold mb-2">Wydatki (publiczne podsumowanie)</h2>
@@ -153,6 +159,26 @@
         // ---- State ----
         let DATA = null // decrypted JSON
 
+        function computeClosed() {
+            try {
+                const entries = Array.isArray(DATA?.entries) ? DATA.entries : []
+                if (!entries.length) return false
+                return entries.every(e => !!e.paid)
+            } catch { return false }
+        }
+
+        function computeStats() {
+            const entries = Array.isArray(DATA?.entries) ? DATA.entries : []
+            const totalCount = entries.length
+            const paidCount = entries.filter(e => !!e.paid).length
+            const amountDue = Number(DATA?.fees?.amountDue || 0)
+            const collected = entries.reduce((s, e) => s + Number(e.amountPaid || 0), 0)
+            const expected = amountDue ? amountDue * totalCount : 0
+            const outstanding = expected - collected
+            const progress = expected ? Math.min(100, Math.round((collected / expected) * 100)) : (paidCount && totalCount ? Math.round((paidCount / totalCount) * 100) : 0)
+            return { paidCount, totalCount, collected, expected, outstanding, progress }
+        }    }
+
         // ---- DOM refs ----
         const pinModal = document.getElementById('pinModal')
         const pinInput = document.getElementById('pinInput')
@@ -163,6 +189,15 @@
         const resultEl = document.getElementById('result')
         const expensesWrap = document.getElementById('expensesWrap')
         const expensesEl = document.getElementById('expenses')
+
+        const historyWrap = document.getElementById('historyWrap')
+        const historyEl = document.getElementById('history')
+
+        // Public info (aggregate receipts, totals)
+        const publicInfoWrap = document.createElement('div')
+        publicInfoWrap.id = 'publicInfoWrap'
+        publicInfoWrap.className = 'mt-6 hidden'
+        expensesWrap.insertAdjacentElement('afterend', publicInfoWrap)
 
         // ---- Load encrypted payload ----
         let ENCRYPTED_PAYLOAD = null
@@ -176,17 +211,60 @@
         // ---- Renderers ----
         function renderSummary() {
             const { account, fees } = DATA
+            const { paidCount, totalCount, collected, expected, outstanding, progress } = computeStats()
+
+            // Auto-close when everyone paid
+            const isClosedAuto = paidCount === totalCount && totalCount > 0
+            DATA.fees.closed = typeof fees.closed === 'boolean' ? (fees.closed || isClosedAuto) : isClosedAuto
+
+            const statusBadge = DATA.fees.closed
+                ? '<span class="px-2 py-0.5 text-[11px] rounded-full bg-emerald-100 text-emerald-700 dark:bg-emerald-900/40 dark:text-emerald-200">ZAKOŃCZONA</span>'
+                : '<span class="px-2 py-0.5 text-[11px] rounded-full bg-amber-100 text-amber-700 dark:bg-amber-900/40 dark:text-amber-200">TRWA</span>'
+
+            // Top summary cards
             summaryEl.innerHTML = `
         <div class="rounded-2xl border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800 shadow-sm">
-          <div class="text-xs text-gray-500">Stan konta</div>
+          <div class="text-xs text-gray-500">Stan konta (łącznie)</div>
           <div class="text-2xl font-semibold">${fmt.format(account.balance)}</div>
           <div class="text-xs text-gray-500 mt-1">Aktualizacja: ${account.lastUpdate}</div>
         </div>
         <div class="rounded-2xl border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800 shadow-sm">
-          <div class="text-xs text-gray-500">Bieżąca składka</div>
-          <div class="text-lg font-medium">${fees.currentPeriod} • ${fmt.format(fees.amountDue)}</div>
-          <div class="text-xs text-gray-500 mt-1">${fees.description || ''}</div>
+          <div class="flex items-center justify-between mb-2">
+            <div>
+              <div class="text-xs text-gray-500">Bieżąca składka</div>
+              <div class="text-lg font-medium">${fees.currentPeriod || ''} • ${fmt.format(fees.amountDue || 0)}</div>
+            </div>
+            ${statusBadge}
+          </div>
+          <div class="text-sm flex gap-3 flex-wrap">
+            <div><span class="text-gray-500">Wpłaty:</span> <strong>${paidCount}/${totalCount}</strong></div>
+            <div><span class="text-gray-500">Zebrano:</span> <strong>${fmt.format(collected)}</strong></div>
+            ${expected ? `<div><span class="text-gray-500">Plan:</span> <strong>${fmt.format(expected)}</strong></div>` : ''}
+            ${expected ? `<div><span class="text-gray-500">Brakuje:</span> <strong>${fmt.format(Math.max(outstanding, 0))}</strong></div>` : ''}
+          </div>
+          <div class="mt-2 h-2 rounded-full bg-gray-200 dark:bg-gray-700 overflow-hidden" aria-label="postęp zbiórki">
+            <div class="h-full bg-blue-600 dark:bg-blue-500" style="width:${progress}%"></div>
+          </div>
+          ${fees.description ? `<div class="text-xs text-gray-500 mt-1">${fees.description}</div>` : ''}
         </div>`
+
+            // Breakdown tiles (if provided)
+            const breakdown = Array.isArray(account.breakdown) ? account.breakdown : []
+            if (breakdown.length) {
+                const grid = document.createElement('div')
+                grid.className = 'sm:col-span-2 grid grid-cols-1 sm:grid-cols-3 gap-3'
+                breakdown.forEach(item => {
+                    const card = document.createElement('div')
+                    card.className = 'rounded-2xl border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800 shadow-sm'
+                    card.innerHTML = `
+            <div class="text-xs text-gray-500">${item.name}</div>
+            <div class="text-xl font-semibold">${fmt.format(item.balance || 0)}</div>
+          `
+                    grid.appendChild(card)
+                })
+                summaryEl.appendChild(grid)
+            }
+
             summaryEl.style.opacity = 1
         }
 
@@ -199,23 +277,54 @@
                 return
             }
 
-            const paidBadge = entry.paid
-                ? `<span class="px-2 py-0.5 text-xs rounded-full bg-emerald-100 text-emerald-700 dark:bg-emerald-900/40 dark:text-emerald-200">OPŁACONO</span>`
-                : `<span class="px-2 py-0.5 text-xs rounded-full bg-rose-100 text-rose-700 dark:bg-rose-900/40 dark:text-rose-200">DO ZAPŁATY</span>`
-
-            const allocations = (entry.allocations || [])
-                .map(a => `<div class="flex justify-between text-sm"><span>${a.purpose}</span><span>${fmt.format(a.amount)}</span></div>`)
-                .join('') || '<div class="text-sm text-gray-500">Brak alokacji</div>'
-
-            const receipts = (entry.receipts || [])
-                .map(url => `<a class="text-blue-600 dark:text-blue-400 underline" href="${url}" target="_blank" rel="noreferrer">Paragon</a>`)
-                .join(' · ') || '<span class="text-gray-500">Brak paragonów</span>'
-
-            const dueInfo = entry.paid
-                ? `<div class="text-sm text-gray-500">Zapłacono: <strong>${fmt.format(entry.amountPaid || 0)}</strong> ${entry.paidOn ? `(${entry.paidOn})` : ''}</div>`
-                : `<div class="text-sm text-gray-500">Do zapłaty: <strong>${fmt.format((DATA.fees?.amountDue || 0) - (entry.amountPaid || 0))}</strong></div>`
+            // Per-collection status list
+            const collections = Array.isArray(DATA.collections) ? DATA.collections : []
+            const payments = entry.payments || {}
+            const rows = collections.map(col => {
+                const p = payments[col.id]
+                const paid = !!(p && p.paid)
+                const badge = paid
+                    ? '<span class="px-2 py-0.5 text-xs rounded-full bg-emerald-100 text-emerald-700 dark:bg-emerald-900/40 dark:text-emerald-200">OPŁACONO</span>'
+                    : '<span class="px-2 py-0.5 text-xs rounded-full bg-rose-100 text-rose-700 dark:bg-rose-900/40 dark:text-rose-200">DO ZAPŁATY</span>'
+                const amountPaid = Number(p?.amountPaid || 0)
+                const due = Number(col.amountDue || 0)
+                const remaining = Math.max(due - amountPaid, 0)
+                return `
+          <div class="flex items-center justify-between gap-3 py-2 border-b border-gray-200/70 dark:border-gray-800/60">
+            <div>
+              <div class="text-sm font-medium">${col.name} ${col.period ? `• ${col.period}` : ''}</div>
+              <div class="text-xs text-gray-500">${paid ? `Zapłacono: <strong>${fmt.format(amountPaid)}</strong>` : `Do zapłaty: <strong>${fmt.format(remaining)}</strong> (z ${fmt.format(due)})`}</div>
+            </div>
+            ${badge}
+          </div>`
+            }).join('') || '<div class="text-sm text-gray-500">Brak zdefiniowanych zbiórek</div>'
 
             resultEl.innerHTML = `
+        <div class="rounded-2xl border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800 shadow-sm">
+          <div class="flex items-center justify-between">
+            <div class="text-base font-semibold">Numer: ${entry.journalNo}</div>
+          </div>
+          <div class="mt-2">${rows}</div>
+        </div>`
+        }
+
+        const paidBadge = entry.paid
+            ? `<span class="px-2 py-0.5 text-xs rounded-full bg-emerald-100 text-emerald-700 dark:bg-emerald-900/40 dark:text-emerald-200">OPŁACONO</span>`
+            : `<span class="px-2 py-0.5 text-xs rounded-full bg-rose-100 text-rose-700 dark:bg-rose-900/40 dark:text-rose-200">DO ZAPŁATY</span>`
+
+        const allocations = (entry.allocations || [])
+            .map(a => `<div class="flex justify-between text-sm"><span>${a.purpose}</span><span>${fmt.format(a.amount)}</span></div>`)
+            .join('') || '<div class="text-sm text-gray-500">Brak alokacji</div>'
+
+        const receipts = (entry.receipts || [])
+            .map(url => `<a class="text-blue-600 dark:text-blue-400 underline" href="${url}" target="_blank" rel="noreferrer">Paragon</a>`)
+            .join(' · ') || '<span class="text-gray-500">Brak paragonów</span>'
+
+        const dueInfo = entry.paid
+            ? `<div class="text-sm text-gray-500">Zapłacono: <strong>${fmt.format(entry.amountPaid || 0)}</strong> ${entry.paidOn ? `(${entry.paidOn})` : ''}</div>`
+            : `<div class="text-sm text-gray-500">Do zapłaty: <strong>${fmt.format((DATA.fees?.amountDue || 0) - (entry.amountPaid || 0))}</strong></div>`
+
+        resultEl.innerHTML = `
         <div class="rounded-2xl border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800 shadow-sm">
           <div class="flex items-center justify-between">
             <div class="text-base font-semibold">Numer: ${entry.journalNo}</div>
@@ -228,13 +337,64 @@
             <div class="mt-2 text-sm">Paragony: ${receipts}</div>
           </div>
         </div>`
-        }
+    }
 
         function renderExpenses() {
             const items = DATA.expenses || []
             if (!items.length) { expensesWrap.classList.add('hidden'); return }
             expensesWrap.classList.remove('hidden')
+            const total = items.reduce((s, e) => s + Number(e.amount || 0), 0)
+            expensesWrap.querySelector('h2').innerHTML = `Ogólna informacja (wydatki i paragony) — suma: ${fmt.format(total)}`
             expensesEl.innerHTML = items.map(e => `
+        <div class="rounded-xl border border-gray-200 dark:border-gray-800 p-3 bg-white dark:bg-gray-800">
+          <div class="flex items-center justify-between text-sm">
+            <div class="font-medium">${e.purpose}</div>
+            <div>${fmt.format(e.amount)}</div>
+          </div>
+          ${e.receipt ? `<div class=\"text-xs\"><a class=\"text-blue-600 dark:text-blue-400 underline\" href=\"${e.receipt}\" target=\"_blank\" rel=\"noreferrer\">Paragon</a></div>` : ''}
+        </div>`).join('')
+
+            // Also render ledger/history (global transactions)
+            renderHistory()
+        }
+
+        function renderHistory() {
+            const ledger = Array.isArray(DATA.ledger) ? [...DATA.ledger] : []
+            if (!ledger.length) { historyWrap.classList.add('hidden'); return }
+            historyWrap.classList.remove('hidden')
+            // Sort by ts desc if present; otherwise keep as-is
+            ledger.sort((a, b) => (b.ts || 0) - (a.ts || 0))
+            const kindBadge = (k) => ({
+                'wpłata': 'bg-emerald-100 text-emerald-700 dark:bg-emerald-900/40 dark:text-emerald-200',
+                'wydatek': 'bg-rose-100 text-rose-700 dark:bg-rose-900/40 dark:text-rose-200',
+                'uznanie': 'bg-blue-100 text-blue-700 dark:bg-blue-900/40 dark:text-blue-200'
+            }[k] || 'bg-gray-100 text-gray-700 dark:bg-gray-800/60 dark:text-gray-200')
+
+            historyEl.innerHTML = ledger.map(tx => {
+                const badge = `<span class=\"px-2 py-0.5 text-[11px] rounded-full ${kindBadge(tx.kind)}\">${tx.kind.toUpperCase()}</span>`
+                const amount = `${fmt.format(Number(tx.amount || 0))}`
+                const who = tx.journalNo ? ` • nr dz.: ${tx.journalNo}` : ''
+                const col = tx.collectionId ? ` • zbiórka: ${getCollectionName(tx.collectionId)}` : ''
+                const note = tx.note ? ` — ${tx.note}` : ''
+                const receipt = tx.receipt ? ` <a class=\"text-blue-600 dark:text-blue-400 underline\" href=\"${tx.receipt}\" target=\"_blank\" rel=\"noreferrer\">Paragon</a>` : ''
+                return `
+          <div class=\"rounded-xl border border-gray-200 dark:border-gray-800 p-3 bg-white dark:bg-gray-800\">
+            <div class=\"flex items-center justify-between text-sm\">
+              <div class=\"font-medium\">${badge} <span class=\"align-middle\">${amount}</span></div>
+              <div class=\"text-xs text-gray-500\">${tx.ref || ''}</div>
+            </div>
+            <div class=\"text-xs text-gray-600 dark:text-gray-300 mt-1\">${(tx.purpose || '')}${who}${col}${note}${receipt}</div>
+          </div>`
+            }).join('')
+        }
+
+        function getCollectionName(id) {
+            const c = (DATA.collections || []).find(x => x.id === id)
+            return c ? c.name : id
+        } expensesWrap.classList.remove('hidden')
+        const total = items.reduce((s, e) => s + Number(e.amount || 0), 0)
+        expensesWrap.querySelector('h2').innerHTML = `Ogólna informacja (wydatki i paragony) — suma: ${fmt.format(total)}`
+        expensesEl.innerHTML = items.map(e => `
         <div class="rounded-xl border border-gray-200 dark:border-gray-800 p-3 bg-white dark:bg-gray-800">
           <div class="flex items-center justify-between text-sm">
             <div class="font-medium">${e.purpose}</div>
@@ -243,7 +403,41 @@
           <div class="text-xs text-gray-500">${e.date || ''}</div>
           ${e.receipt ? `<a class=\"text-xs text-blue-600 dark:text-blue-400 underline\" href=\"${e.receipt}\" target=\"_blank\" rel=\"noreferrer\">Paragon</a>` : ''}
         </div>`).join('')
+
+        // Public info block combining all receipts (entries + expenses)
+        const entryReceipts = (DATA.entries || []).flatMap(e => e.receipts || [])
+        const expenseReceipts = items.map(e => e.receipt).filter(Boolean)
+        const allReceipts = [...new Set([...entryReceipts, ...expenseReceipts])]
+        const { collected, expected, outstanding } = computeStats()
+
+        if (allReceipts.length || expected) {
+            publicInfoWrap.classList.remove('hidden')
+            publicInfoWrap.innerHTML = `
+          <div class="rounded-2xl border border-gray-200 dark:border-gray-800 p-4 bg-white dark:bg-gray-800 shadow-sm">
+            <div class="text-base font-semibold mb-1">Publiczna informacja rozliczeniowa</div>
+            <div class="text-sm text-gray-600 dark:text-gray-300">
+              <div>Plan zbiórki: <strong>${fmt.format(expected || 0)}</strong></div>
+              <div>Zebrano: <strong>${fmt.format(collected || 0)}</strong></div>
+              <div>Do domknięcia: <strong>${fmt.format(Math.max(outstanding || 0, 0))}</strong></div>
+            </div>
+            ${allReceipts.length ? `<div class="mt-3 text-sm">
+              <div class="text-xs text-gray-500 mb-1">Wszystkie paragony (publiczne):</div>
+              <div class="flex flex-wrap gap-2">${allReceipts.map((u, i) => `<a class=\"text-blue-600 dark:text-blue-400 underline\" href=\"${u}\" target=\"_blank\" rel=\"noreferrer\">Paragon ${i + 1}</a>`).join(' ')}</div>
+            </div>` : ''}
+          </div>`
         }
+    }
+        expensesWrap.classList.remove('hidden')
+        expensesEl.innerHTML = items.map(e => `
+        <div class="rounded-xl border border-gray-200 dark:border-gray-800 p-3 bg-white dark:bg-gray-800">
+          <div class="flex items-center justify-between text-sm">
+            <div class="font-medium">${e.purpose}</div>
+            <div>${fmt.format(e.amount)}</div>
+          </div>
+          <div class="text-xs text-gray-500">${e.date || ''}</div>
+          ${e.receipt ? `<a class=\"text-xs text-blue-600 dark:text-blue-400 underline\" href=\"${e.receipt}\" target=\"_blank\" rel=\"noreferrer\">Paragon</a>` : ''}
+        </div>`).join('')
+    }
 
         // ---- Events ----
         document.getElementById('checkBtn').addEventListener('click', () => {
@@ -264,6 +458,10 @@
             try {
                 if (!ENCRYPTED_PAYLOAD) await fetchEncrypted()
                 DATA = await decryptData(pin, ENCRYPTED_PAYLOAD)
+                if (!DATA.fees) DATA.fees = { currentPeriod: '', amountDue: 0, description: '', closed: false }
+                // Auto-close based on entries
+                const closedAuto = computeClosed()
+                DATA.fees.closed = typeof DATA.fees.closed === 'boolean' ? (DATA.fees.closed || closedAuto) : closedAuto
                 pinModal.remove()
                 renderSummary()
                 renderExpenses()
