Test of more than cone money raising:)

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="card">
                 <div class="row"><strong>Stan konta (łącznie)</strong><span class="space"></span><span id="updated"
                         class="muted"></span></div>
-                <div class="kpi" id="totalBalance">—</div>
+                <div class="kpi" id="totalBalance"></div>
                 <div class="muted" id="sourcesHint"></div>
             </div>
             <div class="card" id="currentSection">
@@ -207,11 +207,11 @@
                     <strong>Bieżące zbiórki</strong>
                 </div>
                 <div id="currentList" class="list" style="margin-top:12px; overflow-x:auto;"></div>
-                <div id="currentName" class="title">—</div>
+                <div id="currentName" class="title"></div>
                 <div class="space"></div>
                 <div class="right">
-                    <div class="muted">Zebrano</div>
-                    <div id="currentCollected" class="title">—</div>
+                    <div class="muted"></div>
+                    <div id="currentCollected" class="title"></div>
                 </div>
                 <div class="muted" id="currentMeta"></div>
             </div>
