Added small changes

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
     </main>
 
     <footer class="footer">
-        <small>Aktualizacje danych: pliki JSON w katalogu <code>/data</code>. Strona działa w 100% statycznie na GitHub
-            Pages.</small>
+        <small>Strona działa w 100% statycznie na GitHub Pages.</small>
     </footer>
 
     <script src="app.js"></script>
